--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
       margin: auto;
       line-height: 1.6;
     }
-    h1, h3 {
-      color: #499c54;
-      text-align: center;
-    }
+    h1, h3 h1 {
+  color: #499c54;
+  text-align: center;
+}
+
+h3 {
+  color: #499c54;
+  text-align: left;
+}
     hr {
       border: none;
       border-top: 2px dotted #499c54;
