--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ h3 {
   <h3>⚡ Why This Matters for Multi-Practice Groups</h3>
   <ul>
     <li><strong>Serve clients anytime</strong> — even out of hours</li>
+    <li><strong>Scalable across your 500+ UK practices</strong> — with local branding, custom training, and central oversight</li>
     <li><strong>Free up your front desk</strong> — fewer repetitive queries</li>
     <li><strong>Increase lead conversion</strong> — guide new enquiries to the right place</li>
     <li><strong>Keep messaging consistent</strong> — group-wide clarity with local customisation</li>
